--- a/_layouts/formation.html
+++ b/_layouts/formation.html
@@ -7,12 +7,13 @@ layout: default
         <div class="container">
           <div class="row">
             <div class="col-md-9">
+                <h4><a href="{{"/formations.html"| relative_url}}">Formations</a> &gt; {{page.title}} </h4>
 {{ content }}
             </div>
 
             <div class="col-md-3">
               <div class="course-image">
-                <img width="150" height="150" src="{{page.img}}">
+                <img width="150" height="150" src="{{page.img | relative_url}}">
               </div>
 
               <div class="formation-block">
@@ -20,7 +21,7 @@ layout: default
               </div>
 
               <div class="formation-block">
-                <a href="{{ page.pdf }}" class="button"><i class="fa fa-download" aria-hidden="true"></i>
+                <a href="{{ page.pdf| relative_url }}" class="button"><i class="fa fa-download" aria-hidden="true"></i>
  Programme détaillé</a>
               </div>
 
@@ -31,13 +32,16 @@ layout: default
                       <td>Prix HT</td>
                     </tr>
                     <tr>
-                      <td>Inter : 1 800 €</td>
+                      <td>Inter : {{ page.tarif }}</td>
                     </tr>
                     <tr class="su-even">
-                      <td>Intra : 6 000 €</td>
+                      <td>Intra : <a href="/contact.html">Contactez nous</a></td>
                     </tr>
                   </tbody>
                 </table>
+              </div>
+              <div class="formation-block">
+                <p> Formation prise en charge<br>par votre OPCA</p>
               </div>
             </div>
           </div>
