Improve page speed score for metro on map

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -81,7 +81,7 @@
                         <div id="map-legend">
                             <h3>Wescale</h3>
                             <p>156, boulevard Haussman<br/>75008 Paris</a></p>
-                            <p><img src="{{ "/images/metro.jpg" | relative_url }}" width="25px"/> Miromesnil, St
+                            <p><img src="{{ "/images/metro.jpg" | relative_url }}" width="25px" height="17px"/> Miromesnil, St
                                 Philippe du Roule</p>
                         </div>
                     </div>
