Fix unless for google analytics

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -365,7 +365,7 @@ if (typeof jQuery === 'undefined') {
   ga('send', 'pageview');
 
 </script>
-{% unless %}
+{% endunless %}
 
 <script type="text/javascript">CRISP_WEBSITE_ID = "ffe17ff7-ef76-4ebb-a340-cbb35899a88d";
 (function () {
