--- a/_layouts/formation.html
+++ b/_layouts/formation.html
@@ -41,7 +41,7 @@ layout: default
                 </table>
               </div>
               <div class="formation-block">
-                <p> Formation prise en charge possible<br>par votre OPCA</p>
+                <p> Prise en charge possible<br>par votre OPCA</p>
               </div>
             </div>
           </div>
