Add empty Job page Remove PE

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,10 +50,11 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav menu-links">
                 <li><a href="{{ "/services.html" | relative_url }}">Services</a></li>
-                <li><a href="{{"/a-propos.html" | relative_url }}">Qui sommes nous ?</a></li>
+                <li><a href="{{"/a-propos.html" | relative_url }}">Histoire</a></li>
                 <li><a href="{{"/expertises.html" | relative_url }}">Expertises</a></li>
                 <li><a href="http://blog.wescale.fr/">Blog</a></li>
                 <li><a href="{{ "/formations.html"| relative_url }}">Formations</a></li>
+                <li><a href="{{ "/job.html"| relative_url }}">Job</a></li>
                 <li><a href="{{ "/contact.html"| relative_url }}">Contact</a></li>
 <!--
                 <li><a href="{{ "/job.html"| relative_url }}">Job</a></li>
