Finalize first version of job page

--- a/_includes/wescale-recrute.html
+++ b/_includes/wescale-recrute.html
@@ -4,7 +4,7 @@
                     <div class="modal-content">
                       <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                        <h4 class="modal-title">Rejoignez nous !</h4>
+                        <h4 class="modal-title">Rejoins nous !</h4>
                       </div>
                          <form method="POST" accept-charset="UTF-8" data-toggle="validator" id="rejoignez-nous-form">
                       <div class="modal-body" id="rejoignez-nous-form">
@@ -23,11 +23,11 @@
                             </div>
                           <div class="form-group">
                              <label for="message">Message</label>
-                              <textarea id="message" name="message" required placeholder="Votre message" class="form-control" rows="3"></textarea>
+                              <textarea id="message" name="message" required placeholder="Ton message" class="form-control" rows="3"></textarea>
                             </div>
                       </div>
                       <div class="modal-footer">
-                          <div class="pull-left">Un e-mail vous sera envoyé.</div><input type="submit" value="Envoyer" class="pull-right" id="rejoignez-nous-submit" />
+                          <div class="pull-left">Un e-mail sera envoyé.</div><input type="submit" value="Envoyer" class="pull-right" id="rejoignez-nous-submit" />
                         </div>
                         </form>
                     </div>
