--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,11 +54,9 @@
                 <li><a href="{{"/expertises.html" | relative_url }}">Expertises</a></li>
                 <li><a href="http://blog.wescale.fr/">Blog</a></li>
                 <li><a href="{{ "/formations.html"| relative_url }}">Formations</a></li>
-                <li><a href="{{ "/job.html"| relative_url }}">Job</a></li>
+                <li><a href="{{ "/recrutement.html"| relative_url }}">Recrutement</a></li>
                 <li><a href="{{ "/contact.html"| relative_url }}">Contact</a></li>
-<!--
-                <li><a href="{{ "/job.html"| relative_url }}">Job</a></li>
--->
+
                 <li class="socials">
                     <a href="https://twitter.com/yeswescale" title="Twitter"><i class="fa fa-twitter"
                                                                                 aria-hidden="true"></i></a>
