--- a/css/style.css
+++ b/css/style.css
@@ -1282,3 +1282,45 @@ section#etapes {
         height: 440px;
     }
 }
+
+.flex-container {
+    flex-direction: row;
+    margin-left: -15px;
+    margin-right: -15px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+@media (max-width: 768px) {
+    .flex-item {
+        flex: 0 0 auto;
+        display: block;
+        width: calc(100% - 15px);
+    }
+}
+
+@media (min-width: 769px) {
+    .flex-item {
+        flex: 0 0 auto;
+        display: block;
+        width: calc(25% - 15px);
+    }
+}
+.thumbnail {
+    height:100%;
+    position: relative;
+    padding-bottom: 50px;
+}
+
+.formation-btn {
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 20px;
+}
+
+.formation-img {
+    height: 250px;
+    width: 250px;
+    margin-bottom: 1rem;
+}
