Fix Trainings contact link

--- a/_layouts/formation.html
+++ b/_layouts/formation.html
@@ -35,7 +35,7 @@ layout: default
                       <td>Inter : {{ page.tarif }}</td>
                     </tr>
                     <tr class="su-even">
-                      <td>Intra : <a href="/contact.html">Contactez nous</a></td>
+                      <td>Intra : <a href="{{"/contact.html"| relative_url}}">Contactez nous</a></td>
                     </tr>
                   </tbody>
                 </table>
