Update address rue Taitbout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -86,9 +86,8 @@
                     <div class="col-xs-12 col-lg-4 col-md-4">
                         <div id="map-legend">
                             <h3>Wescale</h3>
-                            <p>156, boulevard Haussman<br/>75008 Paris</a></p>
-                            <p><img src="{{ "/images/metro.jpg" | relative_url }}" width="25px" height="17px"/> Miromesnil, St
-                                Philippe du Roule</p>
+                            <p>23 rue Taitbout<br/>75009 Paris</a></p>
+                            <p><img src="{{ "/images/metro.jpg" | relative_url }}" width="25px" height="17px"/> Chaussée d'Antin Lafayette, Auber, Richelieu - Drouot, Opéra</p>
                         </div>
                     </div>
                 </div>
@@ -98,7 +97,7 @@
 
     <div class="footer-wrapper-top">
         <div class="footer-top">
-            <a href="#" class="to-maps"><i class="fa fa-globe fa-2x"></i><br/> 156 Bd Haussmann, 75008 Paris</a>
+            <a href="#" class="to-maps"><i class="fa fa-globe fa-2x"></i><br/> 23 rue Taitbout, 75009 Paris</a>
         </div>
 
         <div class="footer-contact">
