Fix google maps link longLat for new office location

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -149,7 +149,7 @@ if (typeof jQuery === 'undefined') {
     //Google Map (Footer)
     var MY_MAPTYPE_ID = "wescale-style";
 
-    var wescale = new google.maps.LatLng(48.875270, 2.311063/*48.8755587,2.3110176*/);
+    var wescale = new google.maps.LatLng(48.8730651, 2.3330846);
     var display_map = false;
 
     $('.to-maps').on('click', function (event) {
