--- a/css/style.css
+++ b/css/style.css
@@ -792,7 +792,7 @@ section#etapes {
     /* background: white; */
     color: #6a8aaa;
     font-size: 20px;
-    display: block;
+    display: inline-block;
     line-height: 35px;
     margin: 10px 0;
     padding: 0 5px;
