Fix image to display on complete page background

--- a/css/style.css
+++ b/css/style.css
@@ -854,7 +854,10 @@ a.job-button:hover {
     background-position: center center;
     background-size: cover;
     color: white;
-    padding-top: 300px;
+}
+
+.job-spacer {
+    padding-top: 500px;
 }
 
 .formations-pitch {
