Update map long lat in footer

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -149,7 +149,7 @@ if (typeof jQuery === 'undefined') {
     //Google Map (Footer)
     var MY_MAPTYPE_ID = "wescale-style";
 
-    var wescale = new google.maps.LatLng(48.8730651, 2.3330846);
+    var wescale = new google.maps.LatLng(48.873058, 2.333836);
     var display_map = false;
 
     $('.to-maps').on('click', function (event) {
@@ -174,7 +174,7 @@ if (typeof jQuery === 'undefined') {
         var e = [];
 
         var t = {
-            zoom: 14,
+            zoom: 18,
             mapTypeControl: false,
             center: wescale,
             scrollwheel: false,
