Add Partners to launch page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,12 +49,12 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav menu-links">
-                <li><a href="{{ "/services.html" | relative_url }}">Services</a></li>
-                <li><a href="{{"/a-propos.html" | relative_url }}">Histoire</a></li>
-                <li><a href="{{"/expertises.html" | relative_url }}">Expertises</a></li>
-                <li><a href="http://blog.wescale.fr/">Blog</a></li>
                 <li><a href="{{ "/formations.html"| relative_url }}">Formations</a></li>
+                <li><a href="{{ "/services.html" | relative_url }}">Services</a></li>
                 <li><a href="{{ "/recrutement.html"| relative_url }}">Recrutement</a></li>
+                <li><a href="{{"/a-propos.html" | relative_url }}">Histoire</a></li>
+                <!--<li><a href="{{"/expertises.html" | relative_url }}">Expertises</a></li>-->
+                <li><a href="http://blog.wescale.fr/">Blog</a></li>
                 <li><a href="{{ "/contact.html"| relative_url }}">Contact</a></li>
 
                 <li class="socials">
