center join button in job page in both vertical and horizontal directions

--- a/css/style.css
+++ b/css/style.css
@@ -341,7 +341,8 @@ img {
     margin-top: initial;
 }
 
-.col-md-8.home-content {}
+.col-md-8.home-content {
+}
 
 .partenariats .home-text {
     margin: auto;
@@ -587,6 +588,8 @@ section#etapes {
 .vertical-align {
     display: flex;
     align-items: center;
+    justify-content: center;
+
 }
 
 .home-layer {
@@ -612,7 +615,6 @@ section#etapes {
 .techtrends-title p {
     font-size: medium;
 }
-
 
 .techtrends {
     margin: 0px 0;
@@ -817,6 +819,7 @@ section#etapes {
 
 .job-profils a.job-button {
     color: white;
+    padding: 10px;
 }
 
 a.job-button {
@@ -834,6 +837,8 @@ a.job-button {
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
     border-radius: 5px;
+    padding: 10px;
+
 }
 
 a.job-button:hover {
@@ -851,6 +856,8 @@ a.job-button:hover {
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
     border-radius: 5px;
+    padding: 10px;
+
 }
 
 .job-family {
@@ -891,6 +898,7 @@ a.job-button:hover {
     height: 100%;
     top: 0px;
 }
+
 .welcome-box {
     background-image: url(../images/welcome_box_4x3.jpeg);
     background-repeat: no-repeat;
@@ -901,6 +909,7 @@ a.job-button:hover {
     position: absolute;
     top: 0px;
     left: 0px;
+    text-align: center;
 }
 
 .job-bg p {
@@ -923,7 +932,6 @@ a.job-button:hover {
     display: inline-block;
     width: 250px;
 }
-
 
 .formations-pitch {
     display: block;
