--- a/_layouts/formation.html
+++ b/_layouts/formation.html
@@ -24,6 +24,11 @@ layout: default
                 <a href="{{ page.pdf| relative_url }}" class="button"><i class="fa fa-download" aria-hidden="true"></i>
  Programme détaillé</a>
               </div>
+                
+              <div class="formation-block">
+                <a href="{{"/pdf/formulaire_inscription.pdf"| relative_url}}" class="button"><i class="fa fa-download" aria-hidden="true"></i>
+ Formulaire d'inscription</a>
+              </div>
 
               <div class="formation-block">
                 <table>
